--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </a>
 
       <nav aria-label="primaria">
-        <ul class="header-menu">
+        <ul class="header-menu cor-0 font-1-m">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
           <li><a href="./contato.html">Contato</a></li>
@@ -35,15 +35,17 @@
   <main class="introducao-bg">
     <div class="introducao">
       <div class="introducao-conteudo">
-        <h1>Bicicletas feitas sob medida<span>.</span></h1>
-        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft<span>.</span></p>
-        <a href="./bicicletas.html">Selecione a sua</a>
+        <h1 class="font-1-xxl">Bicicletas feitas sob medida<span>.</span></h1>
+        <p class="texto-medio cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft<span>.</span></p>
+        <a class="botao" href="./bicicletas.html">Selecione a sua</a>
       </div>
       <div class="introducao-imagem">
         <img src="/img/fotos/introducao.jpg" alt="Bicicleta elétrica preta">
       </div>
     </div>
   </main>
+
+  <h2 class="font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
 
 </body>
 
