--- a/bicicletas.html
+++ b/bicicletas.html
@@ -69,7 +69,7 @@
             Rastreador
           </li>
         </ul>
-        <a class="botao" href="./bicicletas/nimbus.html">Mais sobre</a>
+        <a class="botao seta" href="./bicicletas/nimbus.html">Mais sobre</a>
       </div>
     </div>
 
@@ -100,7 +100,7 @@
               Rastreador
             </li>
           </ul>
-          <a class="botao" href="./bicicletas/magic.html">Mais sobre</a>
+          <a class="botao seta" href="./bicicletas/magic.html">Mais sobre</a>
         </div>
       </div>
     </div>
@@ -131,7 +131,7 @@
             Rastreador
           </li>
         </ul>
-        <a class="botao" href="./bicicletas/nebula.html">Mais sobre</a>
+        <a class="botao seta" href="./bicicletas/nebula.html">Mais sobre</a>
       </div>
     </div>
 
